--- a/src/appsettings.yml
+++ b/src/appsettings.yml
@@ -10,3 +10,9 @@ SWAGGER:
   BASE_PATH: ""
 GIN:
   MODE: "debug"
+PROXY:
+  BASE_URL: "http://192.168.1.68:8090/" #"http://host.docker.internal:9091/"
+  BASIC_AUTH:
+    ENABLED: false
+    USER_NAME: "busy-flamingo"
+    PASSWORD: "123"
