--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "auto",
             "program": "./src/main.go",
             "env": {
-                "PORT": 5000
+                "PORT": "5000"
             }
         }
     ]
